@@ -232,6 +232,7 @@ clazy runs all checks from level1 by default.
   - [qhash-with-char-pointer-key](docs/checks/README-qhash-with-char-pointer-key.md)
   - [qproperty-type-mismatch](docs/checks/README-qproperty-type-mismatch.md)
   - [qrequiredresult-candidates](docs/checks/README-qrequiredresult-candidates.md)
+  - [qstring-ref](docs/checks/README-qstring-ref.md) (fix-missing-qstringref)
   - [qstring-varargs](docs/checks/README-qstring-varargs.md)
   - [qt-keyword-emit](docs/checks/README-qt-keyword-emit.md) (fix-qt-keyword-emit)
   - [qt-keywords](docs/checks/README-qt-keywords.md) (fix-qt-keywords)
@@ -272,7 +273,6 @@ clazy runs all checks from level1 by default.
   - [qstring-arg](docs/checks/README-qstring-arg.md)
   - [qstring-comparison-to-implicit-char](docs/checks/README-qstring-comparison-to-implicit-char.md)
   - [qstring-insensitive-allocation](docs/checks/README-qstring-insensitive-allocation.md)
-  - [qstring-ref](docs/checks/README-qstring-ref.md) (fix-missing-qstringref)
   - [qt-macros](docs/checks/README-qt-macros.md)
   - [strict-iterators](docs/checks/README-strict-iterators.md)
   - [temporary-iterator](docs/checks/README-temporary-iterator.md)
