@@ -12,6 +12,7 @@ Bugfixes:
  * Fix wrong replacement method for QMap::operator[]
  * Make project compile with LLVM22. qhash-namespace, fully-qualified-moc-types, old-style-connect tests are fixed
  * Adjust readlock-detaching check to work properly with Qt 6.11 changes
+ * Move qstring-ref to manuallevel since it is not compatible with Qt6
 
 Notes:
  * C++20 is now required for compilation
